sfdc_enterprise_42demo - SANDBOX/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Add_to_Pricebooks__c</fullName>
        <description>Field used in the import of products. By adding a list of pricebook names, separated by comma&apos;s, a trigger will check to see if this product is in that particular pricebook already, and if not add it, or if inactive, activate it.</description>
        <label>Add to Pricebooks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deactivate_in_Pricebooks__c</fullName>
        <description>A comma separated list of pricebooks where this product should be disabled in.Use in conjunction with Deactivation_Rule__c (set it to Listed Pricebooks).</description>
        <label>Deactivate in Pricebooks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Material_number__c</fullName>
        <externalId>true</externalId>
        <label>Material number</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>